--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
             <div class="chat-body"
                 id="chat-body">
                 <div class="chat-messaage bot">
+                    <center>
                     Hii! Have a Nice Day!! I am your cognitive Bias Guide.
-                    Ask me about any cognitive bias or related questions. 
+                    Ask me about any cognitive bias or related questions.
+                </center> 
                 </div>
                 </div>
                 <div class ="chat-footer">
+                    <center>
                     <input type="text"
                     id="user-input" placeholder="Type your message here..."/>
-                    <button id="send-btn">send</button>
+                    <button id="send-btn">Send</button>
+                </center>
                 </div>
             </div>
             <script src="script.js"></script>
