--- a/index.html
+++ b/index.html
@@ -1,72 +1,44 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charsect="UTF-8">
-        <meta name="view point" content="width=device-width,initial-scale=1.0">
-        <title>Cognitive Bias Identifier Chatbot</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.png">
-    </head>
-    <body>
-        <div class="chat-container">
-            <div class="chat-header">
-                <img src="icon.png">
-                <h2>Cognitive Bias Chatbot</h2>
-            </div>
-            <div class="chat-body"
-                id="chat-body">
-                <div class="chat-messaage bot">
-                    <center>
-                    Hii! Have a Nice Day!! I am your cognitive Bias Guide.
-                    Ask me about any cognitive bias or related questions.
-                </center> 
-                </div>
-                </div>
-                <div class ="chat-footer">
-                    <center>
-                    <input type="text"
-                    id="user-input" placeholder="Type your message here..."/>
-                    <button id="send-btn">Send</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cognitive Bias Identifier Chatbot</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.png">
+</head>
+<body>
+    <div class="auth-container">
+        <div class="auth-header">
+            <img src="icon.png" alt="icon">
+            <h2>Cognitive Bias Chatbot</h2>
+        </div>
+        <div class="auth-body">
+            <button class="auth-btn" id="login-btn">Login</button>
+            <button class="auth-btn" id="sign-up-btn">Sign Up</button>
+        </div>
+    </div>
+
+    <div class="chat-container" style="display: none;">
+        <div class="chat-header">
+            <img src="icon.png" alt="icon">
+            <h2>Cognitive Bias Chatbot</h2>
+        </div>
+        <div class="chat-body" id="chat-body">
+            <div class="chat-message bot">
+                <center>
+                    Hii! Have a Nice Day!! I am your cognitive Bias Guide. Ask me about any cognitive bias or related questions.
                 </center>
-                </div>
             </div>
-            <script src="script.js"></script>
-    </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charsect="UTF-8">
-        <meta name="view point" content="width=device-width,initial-scale=1.0">
-        <title>Cognitive Bias Identifier Chatbot</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.png">
-    </head>
-    <body>
-        <div class="chat-container">
-            <div class="chat-header">
-                <img src="icon.png">
-                <h2>Cognitive Bias Chatbot</h2>
-            </div>
-            <div class="chat-body"
-                id="chat-body">
-                <div class="chat-messaage bot">
-                    <center>
-                    Hii! Have a Nice Day!! I am your cognitive Bias Guide.
-                    Ask me about any cognitive bias or related questions.
-                </center> 
-                </div>
-                </div>
-                <div class ="chat-footer">
-                    <center>
-                    <input type="text"
-                    id="user-input" placeholder="Type your message here..."/>
-                    <button id="send-btn">Send</button>
-                </center>
-                </div>
-            </div>
-            <script src="script.js"></script>
-    </body>
->>>>>>> 8283e81d1841b86acd99a5a42d9b18f94f593ccd
+        </div>
+        <div class="chat-footer">
+            <center>
+                <input type="text" id="user-input" placeholder="Type your message here..."/>
+                <button id="send-btn">Send</button>
+            </center>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
