--- a/login.html
+++ b/login.html
@@ -1,30 +1,47 @@
-<html>
-    <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport"
-            content="width=device-width,initial-scale=1.0">
-            <title>Login Page</title>
-            <link rel="stylesheet"
-            href="style2.css"> 
-        </head>
-        <body>
-            <div class="container">
-                <div class="main">
-                    <h2>Login</h2>
-                <form action="Home.html">
-                <input type="text"
-                placeholder="Username" required>
-                <input type="password"
-                placeholder="Password" required>
-                <button type="Submit">Login</button>
-                <P>Don't have an account?<a href="signuppage.html">Sign up</a></P>
-                <button><a href="homepage.html">Home</a></button>
-                </form>
-                </div>
-                
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="style2.css">
+</head>
+<body>
+    <!-- Login Form Section -->
+    <div class="container" id="login-container">
+        <div class="main">
+            <h2>Login</h2>
+            <form id="login-form">
+                <input type="text" id="username" placeholder="Username" required>
+                <input type="password" id="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="signuppage.html">Sign up</a></p>
+            <button class="home-btn"><a href="index.html">Home</a></button>
+        </div>
+    </div>
+
+    <!-- Chat Section (Initially Hidden) -->
+    <div class="chat-container" id="chat-container" style="display: none;">
+        <div class="chat-header">
+            <img src="icon.png" alt="Bot Icon">
+            <h2>Cognitive Bias Chatbot</h2>
+        </div>
+        <div class="chat-body" id="chat-body">
+            <div class="chat-message bot">
+                <center>
+                    Hi! Have a nice day! I am your cognitive bias guide. Ask me about any cognitive bias or related questions.
+                </center> 
             </div>
-            </body>
-    </html>
+        </div>
+        <div class="chat-footer">
+            <center>
+                <input type="text" id="user-input" placeholder="Type your message here..."/>
+                <button id="send-btn">Send</button>
+            </center>
+        </div>
+    </div>
+
+    <script src="login.js"></script>
+</body>
 </html>
