--- a/signuppage.html
+++ b/signuppage.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-        content="width=device-width,initial-scale=1.0">
-        <title>Signup Page</title>
-        <link rel="stylesheet"href="style2.css">
-    </head>
-    <body>
-        <div class="container main">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup Page</title>
+    <link rel="stylesheet" href="style2.css">
+</head>
+<body>
+    <div class="container">
+        <div class="main">
             <h2>Signup</h2>
             <form action="Home.html">
-                <input type="text"
-                placeholder="Username" required>
-                <input type="Email"
-                placeholder="Email" required>
-                <input type="Password"
-                placeholder="Password" required>
-                <button type="Submit">Signup</button>
-                <P>Already have an account?<a href="login.html">Login</a></P>
+                <input type="text" placeholder="Username" required>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit">Signup</button>
             </form>
+            <p>Already have an account? <a href="login.html">Login</a></p>
         </div>
-    </body>
+    </div>
+</body>
 </html>
+    
