--- a/login.html
+++ b/login.html
@@ -24,9 +24,34 @@
     <!-- Chat Section (Initially Hidden) -->
     <div class="chat-container" id="chat-container" style="display: none;">
         <div class="chat-header">
-            <img src="icon.png" alt="Bot Icon">
+            <center><img src="icon.png" alt="Bot Icon"></center>
             <h2>Cognitive Bias Chatbot</h2>
+            <div>
+                <ul>
+                    <li id="listOfCB" class="boldt">List Of CB
+                        <ul id="nestedList" class="nested-list">
+                            <li><a href="#home">Confirmation Bias</a></li>
+                            <li><a href="#contact">Anchoring Bias</a></li>
+                            <li><a href="#feedback">Availability Heuristic</a></li>
+                            <li><a href="#list">Hindsight Bias</a></li>
+                            <li><a href="#list">Self-Serving Bias</a></li>
+                            <li><a href="#list">Illusion of Control</a></li>
+                            <li><a href="#list">Fundamental Attribution Error</a></li>
+                            <li><a href="#list">Halo Effect</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#findingCB">Finding CB</a></li>
+                    <li><a href="#cbTest">CB Test</a></li>
+                    <li><a href="#feedback">Feedback</a></li>
+                    <li><a href="#logout" id="logout">
+                        log 
+                        out
+                    </a></li>
+                </ul>
+            </div>
         </div>
+        
+        
         <div class="chat-body" id="chat-body">
             <div class="chat-message bot">
                 <center>
