--- a/login.html
+++ b/login.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+   
+</div>
+
     <!-- Login Form Section -->
     <div class="container" id="login-container">
         <div class="main">
@@ -27,6 +30,7 @@
             <center><img src="icon.png" alt="Bot Icon"></center>
             <h2>Cognitive Bias Chatbot</h2>
             <div>
+                 
                 <ul>
                     <li id="listOfCB" class="boldt">List Of CB
                         <ul id="nestedList" class="nested-list">
@@ -42,7 +46,9 @@
                     </li>
                     <li><a href="#findingCB">Finding CB</a></li>
                     <li><a href="#cbTest">CB Test</a></li>
-                    <li><a href="#feedback">Feedback</a></li>
+                    <li><a href="about us.html">About us</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
                     <li><a href="#logout" id="logout">
                         log 
                         out
